--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
         </div>
         <div class="in-card">
             <div>
-                <input type="button" class="color" value="C" onclick="clearResult()">
+                <input type="button" class="green" value="C" onclick="clearResult()">
                 <input type="button" class="color" value="+/-"  onclick="insert('+'+'-')">
                 <input type="button" class="color" value="%" onclick="insert('%')">
                 <input type="button" class="color" value="/" onclick="insert('/')">
